@@ -16,6 +16,7 @@ Changes in 1.8.7 (since 1.8.6)
 ** Fix build when compiled with -Wundef -Werror
 ** More build fixes for `alphaev56-dec-osf5.1b' (Tru64)
 ** With GCC, always compile with `-mieee' on `alpha*' and `sh*'
+** Better diagnose broken `(strftime "%z" ...)' in `time.test' (bug #24130)
 
 ** Allow @ macro to work with (ice-9 syncase)
 
